--- a/MasterThesis/refs.bib
+++ b/MasterThesis/refs.bib
@@ -316,4 +316,12 @@
 	
 },
 
+@article{Ozsu, 
+	author  = {Tamer Özsu},  
+	title   = {Distrubuted database systems},
+	Url = {https://www.researchgate.net/publication/228806512_Distributed_Database_Systems}, 
+	volume = 25,
+	year   = 2002,
+	
+},
 
